<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.AddPaymentFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            app:title="Harcama Ekle">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/progressLayout"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ProgressBar>
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbarLayout"
        app:layout_constraintBottom_toBottomOf="parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/paymentNameInputLayout"
        android:layout_margin="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/aciklama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/paymentNameEditText"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="match_parent">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/paymentCostInputLayout"
        android:layout_margin="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/harcama_miktar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/paymentNameInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/paymentCostEditText"
            android:inputType="numberSigned"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/turTv"
        android:padding="5dp"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/paymentCostInputLayout"
        android:text="@string/harcama_turu">
    </TextView>

    <RadioGroup
        android:id="@+id/paymentTypeGroup"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/turTv">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/kiraButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorSplash"
            android:layout_weight="1"
            android:text="@string/kira">
        </com.google.android.material.radiobutton.MaterialRadioButton>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/faturaButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorSplash"
            android:text="@string/fatura">
        </com.google.android.material.radiobutton.MaterialRadioButton>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/digerButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:buttonTint="@color/colorSplash"
            android:layout_height="wrap_content"
            android:text="@string/diger">
        </com.google.android.material.radiobutton.MaterialRadioButton>
    </RadioGroup>

    <TextView
        android:id="@+id/costTv"
        android:text="@string/para_birimi_se_iniz"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/paymentTypeGroup">

    </TextView>
    <RadioGroup
        android:id="@+id/costTypeGroup"
        android:layout_marginVertical="15dp"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/costTv">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/tlButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorSplash"
            android:layout_weight="1"
            android:text="@string/tl">
        </com.google.android.material.radiobutton.MaterialRadioButton>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/dolarButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorSplash"
            android:text="@string/dolar">
        </com.google.android.material.radiobutton.MaterialRadioButton>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/euroButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:buttonTint="@color/colorSplash"
            android:layout_height="wrap_content"
            android:text="@string/euro">
        </com.google.android.material.radiobutton.MaterialRadioButton>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sterlinButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:buttonTint="@color/colorSplash"
            android:layout_height="wrap_content"
            android:text="@string/sterlİn">
        </com.google.android.material.radiobutton.MaterialRadioButton>
    </RadioGroup>
    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/costTypeGroup"
        app:layout_constraintEnd_toEndOf="@id/paymentNameInputLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/ekle"
        android:background="@drawable/border">
    </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>