<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.UserFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/barLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="İsim Değiştir"
            app:titleTextColor="@color/white">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:hint="@string/isim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/barLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/erkekRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorSplash"
            android:text="@string/erkek">
        </com.google.android.material.radiobutton.MaterialRadioButton>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/kadinRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorSplash"
            android:text="@string/kadin">
        </com.google.android.material.radiobutton.MaterialRadioButton>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/otherRadio"
            android:layout_width="wrap_content"
            android:buttonTint="@color/colorSplash"
            android:layout_height="wrap_content"
            android:text="@string/belirtmek_stemiyorum">
        </com.google.android.material.radiobutton.MaterialRadioButton>
    </RadioGroup>
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/genderGroup"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/kaydet"
        android:background="@drawable/border">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>