<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#f5f5f5"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="10dp"
    tools:context=".View.HomeFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardPreventCornerOverlap="true"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="20dp"
            android:background="@drawable/gradient_color"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/helloTv"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Merhaba">
            </TextView>
            <TextView
                android:id="@+id/nameTv"
                android:padding="5dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/helloTv"
                app:layout_constraintTop_toBottomOf="@id/helloTv"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textStyle="bold"
                tools:text="Caner Bey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:id="@+id/harcamaTv"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/harcamaniz"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/toplamTv">
            </TextView>
            <TextView
                android:id="@+id/toplamTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                tools:text="9080 TL"
                app:layout_constraintEnd_toEndOf="@id/harcamaTv"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@id/harcamaTv"
                app:layout_constraintBottom_toBottomOf="parent">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/buttonGroup"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkedButton="@id/tlButton"
            app:selectionRequired="true"
            app:singleSelection="true">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/tlButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/tl"
                style="?attr/materialButtonOutlinedStyle"
                app:shapeAppearance="@style/Rounded"
                android:layout_height="wrap_content">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:text="@string/sterlİn"
                android:id="@+id/sterlinButton"
                app:shapeAppearance="@style/Rounded"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_height="wrap_content">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                app:shapeAppearance="@style/Rounded"
                android:id="@+id/euroButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/euro"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_height="wrap_content">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/dolarButton"
                app:shapeAppearance="@style/Rounded"
                android:text="@string/dolar"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_height="wrap_content">

            </com.google.android.material.button.MaterialButton>
        </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/paymentsRecyclerView"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/payment_row"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/buttonGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:icon="@drawable/add_icon"
        app:iconTint="@color/white"
        android:textColor="@color/white"
        android:text="@string/ekle"
        app:elevation="4dp"
        app:backgroundTint="@color/colorSplash"
        android:layout_height="wrap_content">
    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
</androidx.coordinatorlayout.widget.CoordinatorLayout>